<resources>
    <string name="app_name">Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explorer">Explorer</string>
    <string name="ma_m_teo">Ma méteo</string>
    <string name="localisation_actuelle">Localisation actuelle:</string>
    <string name="recherche_par_ville_ou_coordonn_es">Recherche par ville ou coordonnées..</string>
    <string name="localisations_epingl_es">Localisations epinglées</string>
    <string name="placeholder" />
    <string name="humidity">💧 Humidité</string>
    <string name="uv">☀️ UV</string>
    <string name="Vent">💨 Vent</string>
    <string name="feels_like">🌡️ Ressentie</string>
    <string name="pingler_cette_localisation">Épingler cette localisation</string>
</resources>